# the-undertow

./: .cursorignore  .gitattributes  .gitignore  .pre-commit-config.yaml  API_SPECIFICATION.md  AZURE_DEPLOYMENT.md  CLOUD_COMPARISON.md  CODING_STANDARDS.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_MODELS.md  DEPLOYMENT_GUIDE.md  Dockerfile  EMAIL_SETUP.md  GITHUB_SETUP.md  GUARDRAILS.md  IMPLEMENTATION_PLAN.md  INDEX.md  LICENSE  PROJECT_STRUCTURE.md  PROMPT_LIBRARY.md  QUICK_START.md  README.md  SOLUTION_ARCHITECTURE.md  SOLUTION_ARCHITECTURE_SIMPLE.md  THE_UNDERTOW.md  USER_STORIES.md  ZONES_19_TO_42.md  alembic.ini  docker-compose.yml  env.example  input_needed.md  pyproject.toml  requirements.txt  undertow.service
.github/workflows/: ci.yml
config/: feeds.yaml
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/articles/: page.tsx
frontend/src/app/costs/: page.tsx
frontend/src/app/escalations/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/newsletter/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/stories/: page.tsx
frontend/src/app/verification/: page.tsx
frontend/src/app/zones/: page.tsx
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_vector_store.py
scripts/: create_migration.sh  export_openapi.py  run_local.py  test_agent.py
src/undertow/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  runner.py
src/undertow/agents/: __init__.py  base.py  result.py
src/undertow/agents/adversarial/: __init__.py  debate.py  fact_checker.py
src/undertow/agents/analysis/: __init__.py  chains.py  connections.py  deep_context.py  geometry.py  motivation.py  self_critique.py  subtlety.py  uncertainty.py
src/undertow/agents/collection/: __init__.py  story_scorer.py  zone_scout.py
src/undertow/agents/production/: __init__.py  editor.py  synthesis.py  voice.py  writer.py
src/undertow/agents/shared/: __init__.py
src/undertow/api/: __init__.py  main.py
src/undertow/api/middleware/: __init__.py  auth.py  logging.py  metrics.py  rate_limit.py
src/undertow/api/routes/: articles.py  benchmarks.py  costs.py  dashboard.py  docs.py  escalations.py  export.py  health.py  jobs.py  metrics.py  newsletter.py  openapi.py  pipeline.py  preview.py  prometheus.py  settings.py  stories.py  verification.py  zones.py
src/undertow/cli/: __init__.py  commands.py
src/undertow/core/: __init__.py  batch.py  human_escalation.py
src/undertow/core/pipeline/: __init__.py  debate_orchestrator.py  full_orchestrator.py  orchestrator.py  (+1 more)
src/undertow/infrastructure/: __init__.py  audit.py  benchmarks.py  cache.py  database.py  llm_cache.py  logging.py  prometheus.py  seeders.py
src/undertow/ingestion/: __init__.py
src/undertow/llm/: __init__.py  router.py  tiers.py
src/undertow/models/: __init__.py  article.py  base.py  pipeline.py  story.py
src/undertow/prompts/: __init__.py  few_shot_examples.py
src/undertow/rag/: __init__.py  embeddings.py  vector_store.py
src/undertow/repositories/: __init__.py  article.py  base.py  pipeline.py  story.py
src/undertow/schemas/: __init__.py  base.py
src/undertow/services/: __init__.py  article_export.py  cost_tracker.py  health.py  newsletter.py  newsletter_simple.py  notifications.py  source_scorer.py  webhooks.py
src/undertow/tasks/: __init__.py  analysis.py  celery_app.py  celery_tasks.py  escalation_tasks.py  ingestion.py  maintenance.py  pipeline.py  verification_tasks.py  worker.py
src/undertow/utils/: __init__.py  retry.py  text.py
src/undertow/verification/: __init__.py  claim_extractor.py
tests/: __init__.py  conftest.py
tests/e2e/: test_api.py  test_pipeline.py
tests/golden/: test_geopolitical_scenarios.py
tests/integration/: test_escalation_flow.py  test_pipeline_flow.py  test_verification_flow.py
tests/unit/: test_article_export.py  test_cost_tracker.py  test_health_service.py  test_repositories.py  test_source_scorer.py  test_utils.py
tests/unit/agents/: __init__.py  test_debate.py  test_editor.py  test_motivation.py  test_synthesis.py
tests/unit/core/: __init__.py  test_quality_gates.py
tests/unit/llm/: __init__.py  test_router.py
tests/unit/rag/: test_embeddings.py  test_vector_store.py
tests/unit/verification/: __init__.py  test_claim_extractor.py
(+22 files in other folders)
