[tool.poetry]
name = "the-undertow"
version = "0.1.0"
description = "AI-powered geopolitical intelligence system producing daily newsletter analysis"
authors = ["The Undertow Team"]
readme = "README.md"
packages = [{include = "undertow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.2.0"

# Task queue
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"

# AI
anthropic = "^0.18.0"
openai = "^1.10.0"
tiktoken = "^0.5.0"

# HTTP & Parsing
httpx = "^0.26.0"
feedparser = "^6.0.0"
trafilatura = "^1.6.0"
beautifulsoup4 = "^4.12.0"

# Utilities
structlog = "^24.1.0"
tenacity = "^8.2.0"
python-dateutil = "^2.8.0"
orjson = "^3.9.0"

# CLI
click = "^8.1.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.92.0"
factory-boy = "^3.3.0"
ruff = "^0.1.9"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
import-linter = "^2.0"
interrogate = "^1.5.0"
bandit = "^1.7.0"
types-redis = "^4.6.0"

[tool.poetry.scripts]
undertow = "undertow.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

[tool.ruff.isort]
known-first-party = ["undertow"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "trafilatura.*",
    "celery.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (>5s)",
    "llm: Tests requiring LLM calls",
]

[tool.coverage.run]
source = ["src/undertow"]
branch = true
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# Import linter configuration
[tool.importlinter]
root_package = "undertow"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "undertow.api",
    "undertow.services",
    "undertow.core",
    "undertow.agents",
]

[[tool.importlinter.contracts]]
name = "Agents cannot import services or api"
type = "forbidden"
source_modules = ["undertow.agents"]
forbidden_modules = ["undertow.api", "undertow.services"]

[[tool.importlinter.contracts]]
name = "Core cannot import api"
type = "forbidden"
source_modules = ["undertow.core"]
forbidden_modules = ["undertow.api"]

# Interrogate (docstring coverage)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["tests", "migrations"]
verbose = 0
quiet = false
color = true

# Bandit security
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]  # assert used

